--- a/index.html
+++ b/index.html
@@ -1,15 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-<script>
-  let normalName = 'Chris';
-  let javaScriptName = normalName + ' Script';
-  console.log('Your Javascript Name is ' + javaScriptName); 
-</script>
+  </head>
+  <body>
+    <h1>This is some Text</h1>
+
+    And some more
+    <textarea>
+      What does the textarea do, Oh i see now what it does
+    </textarea>
+
+    <p>And some more text</p>
+    <script>
+      let normalName = "Chris";
+      let javaScriptName = normalName + " Script";
+      console.log("Your Javascript Name is " + javaScriptName);
+    </script>
   </body>
 </html>
